--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
 		<section>
 			<div class="conteiner">
 				<h1>Привіт, я Юля Романенко.</h1>
-				<img src="img/my-fase.jpg" alt="fase my" width="300">
+				<img src="img/my-fase.jpg" alt="Дівчина з довгим волоссям на вулиці" width="300">
 				<p class="text-description">Я з міста Запоріжжя. Зараз я переїхала до м.Черкаси, бо тут моя дитина має змогу навчатись не онлайт, і я дуже радію цьому.<br>  Зараз я навчаюсь на супер курсі, та освоюю нові знання- кожен раз після навчання я радію тому що<mark> попала до одного з найкращіх вчителів.</mark> <br>
 					В мене є мрії, цей курс-пачаток їх здійснення. 
 				
@@ -31,7 +31,7 @@
 				<h2>Сторінки мого вчителя:</h2>
 				<ul>
 					<li>
-						<a href="https://www.youtube.com/@FreelancerLifeStyle">
+						<a target="_blank" href="https://www.youtube.com/@FreelancerLifeStyle">
 							<div>
 								<img src="img/frilans.png" alt="" width="100">
 							</div>найкращого вчителя
@@ -40,7 +40,7 @@
 					</li>
 					<li>
 						
-						<a href="https://www.linkedin.com/in/evgeniyandrikanich">Linkedin найкращого вчителя</a>
+						<a target="_blank" href="https://www.linkedin.com/in/evgeniyandrikanich">Linkedin найкращого вчителя</a>
 
 					</li>
 				</ul>
@@ -84,7 +84,7 @@
 		<section>
 			<div>
 				<h2 id="family">Родина</h2>
-				<img src="img/my-family.jpg" alt="famaly" width="300">
+				<img src="img/my-family.jpg" alt="Дві дівчині і чоловік сидять біля стола " width="300">
 				<p>Вони моя підтримка, а я їхня. Дочка (їй 14) вчить дизайн в IT-STEP вже 5 років і їй це дуже подобаеться, Коханий дуже любить мене і піклується про мене, а я кохаю його. В  нас дуже дружня сім'я.
 				</p>
 			</div>
@@ -111,8 +111,14 @@
 	<footer class="footer">
 			<div id="contact"></div>
 				<address>
-					<a href="mailto:0956306645romanenko@gmail.com">0956306645romanenko@gmail.com</a>
-					<p>+380507306677</p>
+					<ul>
+						<li class="contact-item">
+							<a href="mailto:0956306645romanenko@gmail.com">0956306645romanenko@gmail.com</a>
+						</li>
+						<li class="contact-item">
+							<a href="tel:+380507306677">+38 050 730 66 77</a>
+						</li>
+					</ul>
 				</address>
 	</footer>
 </body>
