--- a/lesson_08/index.html
+++ b/lesson_08/index.html
@@ -395,7 +395,7 @@
 					<li class="star-item">
 					<p>Елемент дизайну PNG - Можуть бути як векторні, так і растрові.-png розмір-3.98КБ</p>
 					<picture>
-						<source srcset="/img/png/png/star@2x.png 2x, img/png/png/star@3x.png 3x">
+						<source srcset="img/png/png/star@2x.png 2x, img/png/png/star@3x.png 3x">
 						<img src="img/png/png/star@1x.png" alt="оранжева зірка">
 					</picture>
 					</li>
@@ -497,8 +497,8 @@
 						<div class="conteiner-svg-picture">
 
 							<picture>
-								<source media="(min-width: 1200px)" srcset="img/svg/facebook.svg" width="100">
-								<source media="(min-width: 768px)" srcset="img/svg/instagram.svg" width="50">
+								<source media="(min-width: 1200px)" srcset="img/svg/facebook.svg">
+								<source media="(min-width: 768px)" srcset="img/svg/instagram.svg">
 								<img src="img/svg/twitter.svg" alt="logo" width="30">
 							</picture>
 
