--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -87,7 +87,7 @@
 					<div class="card-conteiner">
 						<div class="card-baner">
 							<h3>Basic</h3>
-							<h4>$99</h4>
+							<h4>$99</h4> 
 							<p>Billed monthly</p>
 						</div>
 
@@ -127,10 +127,10 @@
 							</li>
 						</ul>
 		
-						<ul class="data">
-							<li>Date</li>
-							<li>7 Dec, 2021</li>
-						</ul>
+						<span class="data">
+							<span>Date</span>
+							7 Dec, 2021
+						</span>
 
 					</div>
 				<img src="img/baner.jpg" alt="дівчата посміхаються біля них нотбуки" width="970">
@@ -184,9 +184,7 @@
 								digital solutions to promote your product or service online and help you.
 							</p>
 						</div>
-						<div>
-						</div>
-
+				
 					</div>
 				</div>
 
@@ -249,7 +247,6 @@
 				<div class="end blok">and</div>
 		</div>
 					
-
 
 
 			 </section>
