--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -30,27 +30,12 @@
 		</div>
 
 	</nav>
-		<!-- <div class="header__conteiner-nav nav">
-			<div class="nav2">
-				<p class="nav__text">menu</p>
-			</div>
-		
-			<ul class="nav__list2">
-				<li class="nav__item">
-					<a href="#position" class="nav__link">Завдання на позиціанування</a>
-				</li>
-				<li class="nav__item">
-					<a href="#useful" class="nav__link">Корисні посилання по темі</a>
-				</li>
-				<li class="nav__item">
-					<a href="" class="nav__link"></a>
-				</li>
-			</ul>
-		</div> -->
+
 	</header>
 
 
 	<main class="page">
+		<h1 class="page__title title-big">position</h1>
 		<!-- -----portfolio -->
 		<section class="portfolio" id="position">
 			<div class="portfolio__container">
