--- a/lesson_17/lesson_17/index.html
+++ b/lesson_17/lesson_17/index.html
@@ -57,10 +57,10 @@
 								<a href="" class="menu__link">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum fugiat vero vitae asperiores veritatis nam minima molestias facilis, maiores alias, autem modi eveniet totam ex eum. Eum natus eligendi dignissimos libero possimus odit? Expedita numquam nobis enim voluptatibus vero laboriosam autem quae, corporis animi doloribus recusandae inventore ducimus? A?</a>
 							</li> -->
 							<li class="menu__item">
-								<a href="" class="menu__link">Task1</a>
+								<a href="#taskfirst" class="menu__link">Task1</a>
 							</li>
 							<li class="menu__item">
-								<a href="" class="menu__link">Task2</a>
+								<a href="#tasksecond" class="menu__link">Task2</a>
 							</li>
 					</ul>
 				</div>
@@ -72,6 +72,21 @@
 					<div class="header__burger-menu"><span></span></div>
 				</div>
 			</div>
+
+				<div class="header__action-menu action-menu">
+					<ul class="menu__list">
+						<!-- 						
+											<li class="menu__item">
+												<a href="" class="menu__link">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum fugiat vero vitae asperiores veritatis nam minima molestias facilis, maiores alias, autem modi eveniet totam ex eum. Eum natus eligendi dignissimos libero possimus odit? Expedita numquam nobis enim voluptatibus vero laboriosam autem quae, corporis animi doloribus recusandae inventore ducimus? A?</a>
+											</li> -->
+				<li class="menu__item">
+					<a href="#taskfirst" class="menu__link">Task1</a>
+				</li>
+				<li class="menu__item">
+					<a href="#tasksecond" class="menu__link">Task2</a>
+				</li>
+					</ul>
+				</div>
 
 		</header>
 		<section class="slider01-conteiner">
@@ -109,7 +124,7 @@
 
 		<main class="page">
 
-		 <section class="catalog">
+		 <section class="catalog" id="taskfirst">
 			<div class="catalog__conteiner">
 				<ul class="catalog__list">
 					<li class="catalog__item">
@@ -137,7 +152,7 @@
 				<form class="form" action="#" enctype="multipart/form-data">
 					<div class="form__select-box">
 
-						<select name="form[select]" id="">
+						<select name="form[select]" id="#selmenu">
 							<option value="all">Show All</option>
 							<option value="design">Design</option>
 							<option value="branding">Branding</option>
@@ -250,7 +265,7 @@
 				</div>
 			</div>
 	    </section>
-			<section class="catalog02">
+			<section class="catalog02" id="tasksecond">
 				<p class="catalog02__description">Portfolio</p>
 				<h2 class="catalog02__title go">Latest Work</h2>
 				<ul class="catalog02__list">
@@ -294,11 +309,11 @@
 						<select
 						 name="form[select]"
 						 class="catalog02__select">
-						 <option class="select-option" value="show-all"><p class="select-option">Show All</p></option>
-							<option class="select-option" value=design""><p class="select-option">Design</p></option>
-							<option class="select-option" value="branding"><p class="select-option">Branding</p></option>
-							<option class="select-option" value="illustration"><p class="select-option">Illustration</p></option>
-							<option class="select-option" value="motion"><p class="select-option">Motion</p></option>
+						 <option class="select-option" value="show-all">Show All</option>
+							<option class="select-option" value=design">Design</option>
+							<option class="select-option" value="branding">>Branding</option>
+							<option class="select-option" value="illustration">Illustration</option>
+							<option class="select-option" value="motion">Motion</option>
 						</select>
 					</div>
 				</div>
@@ -402,7 +417,20 @@
 			</section>
 		</main>
 		<footer class="footer">
-
+				<div class="footer__menu-body menu">
+					<ul class="menu__list">
+						<!-- 						
+											<li class="menu__item">
+												<a href="" class="menu__link">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum fugiat vero vitae asperiores veritatis nam minima molestias facilis, maiores alias, autem modi eveniet totam ex eum. Eum natus eligendi dignissimos libero possimus odit? Expedita numquam nobis enim voluptatibus vero laboriosam autem quae, corporis animi doloribus recusandae inventore ducimus? A?</a>
+											</li> -->
+						<li class="menu__item">
+							<a href="#taskfirst" class="menu__link">Task1</a>
+						</li>
+						<li class="menu__item">
+							<a href="#tasksecond" class="menu__link">Task2</a>
+						</li>
+					</ul>
+				</div>
 		</footer>
 	</div>
 	<script src="js/script.js"></script>
